<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="main_activity_title">My Nanodegree Apps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_app">SPOTIFY STREAMER</string>
    <string name="seconds_app">SCORES APP</string>
    <string name="third_app">LIBRARY APP</string>
    <string name="fourth_app">BUILD IT BIGGER</string>
    <string name="fifth_app">XYZ READER</string>
    <string name="final_app">CAPSTONE: MY OWN APP</string>
</resources>
